--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,14 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",  
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
     "forceConsistentCasingInFileNames": true,    
     "typeRoots": ["./node_modules/@types"],
-    "types": [],
+    "types": ["node"],  
     "paths": {
       "@/*": ["./src/*"]
     }
